# airlines_agent

./: README.md
backend/: main.py
backend/agent/: controller.py
backend/db/: database.py  flight_agent.db  init_db.py  models.py
backend/services/: all_tools.py  create_booking.py  extract_entities.py  get_booking.py  get_flight_details.py  retrieve_info.py  search_flights.py
crew/airline_crew/: README.md  pyproject.toml
crew/airline_crew/src/airline_crew/: crew.py  main.py
llm_code/: llm.ipynb  search_flights.ipynb
