[project]
name = "airline_crew"
version = "0.1.0"
description = "airline_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.11.0"
]

[project.scripts]
airline_crew = "airline_crew.main:run"
run_crew = "airline_crew.main:run"
train = "airline_crew.main:train"
replay = "airline_crew.main:replay"
test = "airline_crew.main:test"
run_with_trigger = "airline_crew.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
